# 1.6.1

## Enhancements

### General

 * Import-Carbon.ps1 now support the `-WhatIf` switch.
 
## Bug Fixes

### General

 * No more silent errors when importing Carbon on Windows 2012 R2.


# 1.6.0 (1 February 2014)

## Bug Fixes

### File System

 * [Remove-Junction](http://get-carbon.org/help/Remove-Junction.html) doesn't delete a junction when given a relative path to the junction.
 
### Services

 * [Install-Service](http://get-carbon.org/help/Install-Service.html) doesn't properly resolve a service's path.
 
### Shares

 * Fixed [Install-SmbShare](http://get-carbon.org/help/Install-SmbShare.html) example to use correct syntax. [#111.](https://bitbucket.org/splatteredbits/carbon/issue/111)

## Enhancements

### Hosts File

 * Created [Remove-HostsEntry](http://get-carbon.org/help/Remove-HostsEntry.html) function for removing hostnames from a hosts file.

### IIS

 * Created [Join-IisVirtualPath](http://get-carbon.org/help/Join-IisVirtualPath.html) for joining paths used by the IIS APIs.
 * Renamed all IIS `Path` parameters which represented virtual paths to `VirtualPath` (with backwards-compatible aliases):
    * [Disable-IisSecurityAuthentication](http://get-carbon.org/help/Disable-IisSecurityAuthentication.html)
    * [Enable-IisDirectoryBrowsing](http://get-carbon.org/help/Enable-IisDirectoryBrowsing.html)
    * [Enable-IisSecurityAuthentication](http://get-carbon.org/help/Enable-IisSecurityAuthentication.html)
    * [Enable-IisSsl](http://get-carbon.org/help/Enable-IisSsl.html)
    * [Get-IisApplication](http://get-carbon.org/help/Get-IisApplication.html)
    * [Get-IisConfigurationSection](http://get-carbon.org/help/Get-IisConfigurationSection.html)
    * [Get-IisHttpHeader](http://get-carbon.org/help/Get-IisHttpHeader.html)
    * [Get-IisHttpRedirect](http://get-carbon.org/help/Get-IisHttpRedirect.html)
    * [Get-IisMimeMap](http://get-carbon.org/help/Get-IisMimeMap.html)